--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack -p 3001",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -16,15 +16,19 @@
     "**/*": "prettier --write --ignore-unknown"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.25.0",
     "@ducanh2912/next-pwa": "^10.2.9",
+    "@emotion/react": "^11.14.0",
     "@gsap/react": "^2.1.2",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.8.4",
     "eslint-plugin-prettier": "^5.2.3",
     "lenis": "^1.2.3",
     "next": "^15.5.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "react-icons": "^5.5.0",
     "swr": "^2.3.3",
     "usehooks-ts": "^3.1.1"
   },
