--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-inlinesvg": "^4.2.0",
     "swr": "^2.3.3",
     "usehooks-ts": "^3.1.1"
   },
