--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "@gsap/react": "^2.1.2",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.8.4",
+    "chart.js": "^4.5.0",
     "eslint-plugin-prettier": "^5.2.3",
     "lenis": "^1.2.3",
     "next": "^15.5.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-inlinesvg": "^4.2.0",
