--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react-icons": "^5.5.0",
     "react-inlinesvg": "^4.2.0",
     "swr": "^2.3.3",
-    "usehooks-ts": "^3.1.1"
+    "usehooks-ts": "^3.1.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
