--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@ducanh2912/next-pwa": "^10.2.9",
     "@emotion/react": "^11.14.0",
     "@gsap/react": "^2.1.2",
+    "@hookform/resolvers": "^5.2.1",
     "@uidotdev/usehooks": "^2.4.1",
     "axios": "^1.8.4",
     "chart.js": "^4.5.0",
@@ -30,10 +31,12 @@
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "react-icons": "^5.5.0",
     "react-inlinesvg": "^4.2.0",
     "swr": "^2.3.3",
     "usehooks-ts": "^3.1.1",
+    "zod": "^4.1.5",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
